src/snapshots/parsing/expressions/less_equal.snap
---
source: src/parser.rs
description: parsing expression
expression: actual.unwrap()
info: 2 <= 3
---
location:
  line: 1
  column: 1
kind:
  binary:
    - less_than_or_equal
    - location:
        line: 1
        column: 1
      kind:
        int_constant:
          - "2"
          - decimal
    - location:
        line: 1
        column: 6
      kind:
        int_constant:
          - "3"
          - decimal
