src/snapshots/parsing/expressions/less_than.snap
---
source: src/parser.rs
description: parsing expression
expression: actual.unwrap()
info: 3 < 4
---
location:
  line: 1
  column: 1
kind:
  binary:
    - less_than
    - location:
        line: 1
        column: 1
      kind:
        int_constant:
          - "3"
          - decimal
    - location:
        line: 1
        column: 5
      kind:
        int_constant:
          - "4"
          - decimal
