src/snapshots/parsing/expressions/logical_and.snap
---
source: src/parser.rs
description: parsing expression
expression: actual.unwrap()
info: 10 && 20
---
location:
  line: 1
  column: 1
kind:
  binary:
    - and
    - location:
        line: 1
        column: 1
      kind:
        int_constant:
          - "10"
          - decimal
    - location:
        line: 1
        column: 7
      kind:
        int_constant:
          - "20"
          - decimal
