src/snapshots/parsing/expressions/logical_not.snap
---
source: src/parser.rs
description: parsing expression
expression: actual.unwrap()
info: "!10"
---
location:
  line: 1
  column: 1
kind:
  unary:
    - not
    - location:
        line: 1
        column: 2
      kind:
        int_constant:
          - "10"
          - decimal
