src/snapshots/parsing/expressions/not_equal.snap
---
source: src/parser.rs
description: parsing expression
expression: actual.unwrap()
info: 5 != 6
---
location:
  line: 1
  column: 1
kind:
  binary:
    - not_equal
    - location:
        line: 1
        column: 1
      kind:
        int_constant:
          - "5"
          - decimal
    - location:
        line: 1
        column: 6
      kind:
        int_constant:
          - "6"
          - decimal
