src/snapshots/parsing/expressions/precedence_and_or.snap
---
source: src/parser.rs
description: parsing expression
expression: actual.unwrap()
info: 1 && 0 || 1
---
location:
  line: 1
  column: 1
kind:
  binary:
    - or
    - location:
        line: 1
        column: 1
      kind:
        binary:
          - and
          - location:
              line: 1
              column: 1
            kind:
              int_constant:
                - "1"
                - decimal
          - location:
              line: 1
              column: 6
            kind:
              int_constant:
                - "0"
                - decimal
    - location:
        line: 1
        column: 11
      kind:
        int_constant:
          - "1"
          - decimal
